# WalrusOs

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  SECURITY.md  SPEC.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
benchmarks/: WalrusOS_Benchmark_Report.md  bench_memory.py  bench_suite.py  generate_charts.py  results.json  run_benchmarks.py
dashboard/: package-lock.json  package.json  walrusos_bridge.py
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/agents/: page.tsx
dashboard/app/agents/graph/: page.tsx
dashboard/app/branches/: page.tsx
dashboard/app/capabilities/: page.tsx
dashboard/app/events/: page.tsx
dashboard/app/explorer/: page.tsx
dashboard/app/memory/: page.tsx
dashboard/app/memory/timeline/: page.tsx
dashboard/app/permissions/: page.tsx
dashboard/app/recovery/: page.tsx
dashboard/app/replay/: page.tsx
dashboard/app/search/: page.tsx
dashboard/app/settings/: page.tsx
dashboard/app/snapshots/: page.tsx
dashboard/app/streams/: page.tsx
dashboard/app/sui/: page.tsx
dashboard/app/tasks/: page.tsx
dashboard/app/trust-graph/: page.tsx
dashboard/app/verification/: page.tsx
dashboard/app/walrus/: page.tsx
dashboard/app/workspaces/: page.tsx
dashboard/components/: agent-graph.tsx  copy-button.tsx  event-feed.tsx  explainer.tsx  memory-timeline.tsx  permission-matrix.tsx  sidebar.tsx
dashboard/lib/: api.ts
demo/: README.md  architecture.mmd  run.py  video_script.md
docs/: REAL_AGENT_SETUP.md  api-reference.md  api_reference.md  architecture.md  cli.md  concepts.md  examples.md  faq.md  index.md  infrastructure.md  integrations.md  mcp-setup.md  migration.md  quickstart.md  recovery.md
docs/integrations/: README.md
examples/: basic_memory.py  domain_modeling.py  end_to_end_demo.py  firebase_like_api.py  integration_langgraph.py  shared_memory.py  sui_identity.py  v0.1_hello_world.py  walrus_memory.py
examples/01_research_team/: main.py
examples/02_software_engineering/: main.py
examples/03_trading_team/: main.py
examples/04_customer_support/: main.py
examples/05_scientific_research/: main.py
examples/frameworks/: autogen_example.py  crewai_example.py  langgraph_example.py  llamaindex_example.py  openai_example.py  pydantic_ai_example.py
move/walrusos/: Move.toml  Published.toml
move/walrusos/sources/: identity.move  memory.move  protocol.move
scripts/: benchmark_recovery.py  benchmark_replay.py  demo_all_three_modes.py  demo_context_builder.py  demo_coordination.py  demo_cross_vendor.py  demo_full_workflow.py  demo_gemini_agents.py  demo_integration.py  demo_mesh.py  demo_presence.py  demo_real_agent.py  demo_recovery.py  deploy_contracts.sh  deploy_sui.sh  deploy_walrusos.py  diag_adapter_anchor.py  diag_adapter_anchor_hyphen.py  diag_anchors.py  diag_check_demo_writes.py  diag_ledger_introspect.py  diag_permissions.py  diag_sui_anchor.py  diag_verify_digest.py  generate_docs.py  last_cross_vendor_proof.txt  last_workflow_proof.txt  migrate_agent_identities.py  migrate_v0_to_events.py  seed_test_capability.py  verify_deployment.py
tests/: conftest.py  test_adapters.py  test_agent_registry.py  test_autonomous_runtime.py  test_bridge_session_routes.py  test_cli.py  test_client.py  test_context_builder.py  test_coordination.py  test_cross_vendor.py  test_domain_models.py  test_event_mesh.py  test_full_workflow.py  test_integrations.py  test_llm_providers.py  test_mcp_real_agent.py  test_mcp_server.py  test_memory_engine.py  test_memory_intelligence.py  test_multiagent_runtime.py  test_sdk.py  test_security.py  test_session_protocol.py  test_sui_real_dispatch.py
tests/integration/: test_agent_identity.py  test_capability_enforcement.py  test_crypto_verification.py  test_disaster_recovery.py  test_p0_fixes.py  test_replay_engine.py  test_sui.py  test_sui_real.py  test_time_travel.py  test_walrus.py  test_walrus_real.py
tests/integrations/: test_integrations.py
tests/unit/: test_trust_graph.py
walrusos/: __init__.py  client.py  config.py  py.typed  types.py
walrusos/adapters/: in_memory.py  key_store.py  local_db.py  sqlite_ledger.py  sui.py  sui_real.py  walrus.py  walrus_real.py
walrusos/cli/: __init__.py  _state.py  cmd_agent.py  cmd_artifacts.py  cmd_branch.py  cmd_connect.py  cmd_coordinate.py  cmd_events.py  cmd_init.py  cmd_login.py  cmd_logs.py  cmd_mcp.py  cmd_memory.py  cmd_permissions.py  cmd_recover.py  cmd_replay.py  cmd_run.py  cmd_search.py  cmd_workspace.py  main.py
walrusos/core/: crypto.py
walrusos/core/models/: __init__.py  agent_identity.py  coordination.py  events.py  identity.py  memory.py  orchestration.py  run_result.py  security.py  session.py  storage.py  task.py
walrusos/core/projections/: engine.py
walrusos/engine/: context.py  event_store.py  interfaces.py  memory.py  ranking.py  recovery.py  replay.py  search.py  summarizer.py  time_travel.py  token_budget.py
walrusos/integrations/: __init__.py  autogen.py  connect.py  crewai.py  langgraph.py  llamaindex.py  openai.py  pydantic_ai.py
walrusos/mcp/: __init__.py  config.py  server.py
walrusos/runtime/: autonomous.py  collaboration.py  coordinator.py  event_bus.py  llm.py  presence.py  registry.py
walrusos/sdk/: __init__.py  agent.py  exceptions.py  live.py  stream.py  task.py  workspace.py
