[project]
name = "walrusos"
version = "0.1.0"
description = "Git for AI Memory. The decentralized operating layer for autonomous agents."
authors = [{ name = "WalrusOS Core Team", email = "hello@walrusos.network" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "ai", "agents", "memory", "blockchain", "sui", "walrus",
    "langgraph", "crewai", "llm", "decentralized", "storage",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6.0",
    "pydantic[email]>=2.6.0",
    "sqlmodel>=0.0.14",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "zstandard>=0.22.0",
    "cryptography>=42.0.5",
    "tenacity>=8.2.3",
]

[project.urls]
Homepage      = "https://walrusos.network"
Documentation = "https://docs.walrusos.network"
Repository    = "https://github.com/walrusos/walrusos"
Issues        = "https://github.com/walrusos/walrusos/issues"
Changelog     = "https://github.com/walrusos/walrusos/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Sui blockchain anchoring (on-chain tamper evidence + capabilities)
sui = [
    "pysui>=0.33.0",
]
# Protocol debugger dashboard
dashboard = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
]
# Framework integrations
integrations = [
    "langgraph>=0.0.30",
    "crewai>=0.20.0",
    "llama-index-core>=0.10.0",
    "pyautogen>=0.2.20",
    "openai>=1.14.0",
]
# Development tools
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
    "pip-audit>=2.7.0",
]
# Everything
all = [
    "walrusos[sui]",
    "walrusos[dashboard]",
    "walrusos[integrations]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
walrusos = "walrusos.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["walrusos"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["B008", "UP007"]

[tool.ruff.lint.isort]
known-first-party = ["walrusos"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["walrusos"]
omit = ["walrusos/cli/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
