[project]
name = "walrusos"
version = "0.1.0"
description = "Git for AI Memory. The decentralized operating layer for autonomous agents."
authors = [{ name = "WalrusOS Core Team", email = "hello@walrusos.network" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "ai", "agents", "memory", "blockchain", "sui", "walrus",
    "langgraph", "crewai", "llm", "decentralized", "storage",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6.0",
    "pydantic[email]>=2.6.0",
    "sqlmodel>=0.0.14",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "zstandard>=0.22.0",
    "cryptography>=42.0.5",
    "tenacity>=8.2.3",
    # MCP server is a first-class feature (`walrusos mcp start` + Claude Desktop
    # integration). Tests import walrusos.mcp.server unconditionally, so the
    # SDK must always be available — not behind an optional extra.
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Repository    = "https://github.com/Kal-MrNobody/WalrusOs"
Issues        = "https://github.com/Kal-MrNobody/WalrusOs/issues"
Changelog     = "https://github.com/Kal-MrNobody/WalrusOs/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Sui blockchain anchoring (on-chain tamper evidence + capabilities)
sui = [
    "pysui>=0.33.0",
]
# Protocol debugger dashboard
dashboard = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
]
# Framework integrations
integrations = [
    "langgraph>=0.0.30",
    "crewai>=0.20.0",
    "llama-index-core>=0.10.0",
    "pyautogen>=0.2.20",
    "openai>=1.14.0",
]
# Development tools
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
    "pip-audit>=2.7.0",
    # fastapi is needed by tests/test_bridge_session_routes.py for TestClient.
    # It's also in [dashboard] for runtime use; duplicated here so CI's
    # `pip install -e .[dev]` is enough to collect every unit test.
    "fastapi>=0.110.0",
    "httpx>=0.27.0",  # TestClient transitively needs it
]
# Everything
all = [
    "walrusos[sui]",
    "walrusos[dashboard]",
    "walrusos[integrations]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
walrusos = "walrusos.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["walrusos"]

[tool.hatch.build.targets.sdist]
# Source distribution: ship the package + minimal docs only.
# Explicitly EXCLUDE everything else to guarantee no secrets, no scratch
# scripts, no test data, no built artifacts leak into the uploaded sdist.
include = [
    "walrusos/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
    ".env.example",
]
exclude = [
    # tests, dashboards, sister projects
    "tests/",
    "dashboard/",
    "move/",
    "benchmarks/",
    "demo/",
    "docs/",
    "examples/",
    # one-off scripts and run artifacts
    "scripts/",
    "demo_*.py",
    "diag_*.py",
    "**/*.log",
    "**/*.db",
    "**/*.sqlite*",
    "**/last_*proof.txt",
    # secrets / local config
    ".env",
    "**/.env",
    ".sui/",
    "**/.walrusos/",
    # repo plumbing
    ".github/",
    ".claude/",
    ".pre-commit-config.yaml",
    ".gitignore",
    ".gitattributes",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["B008", "UP007"]

[tool.ruff.lint.isort]
known-first-party = ["walrusos"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["walrusos"]
omit = ["walrusos/cli/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
